fix: docusaurus configuration

--- a/docs/docs/developers/api/permissions.mdx
+++ b/docs/docs/developers/api/permissions.mdx
@@ -6,8 +6,8 @@ Stoat's permission system works by sequentially applying allows then denies.
 
 Below are the high-level steps taken to determine both server and channel permissions (click to view).
 
-<a href="../../assets/api/Permission Hierarchy.svg" target="_blank">
-    <img src="../../assets/api/Permission Hierarchy.svg" style="background: white; padding: 1em; border-radius: 1em" />
+<a href="./permission hierarchy.svg" target="_blank">
+  <img src="./permission_hierarchy.svg" style={{background: "white", padding: "1em", borderRadius: "1em"}} />
 </a>
 
 If you are looking to implement permissions in a library, I highly recommend reading either the Stoat JavaScript SDK or the backend source code since all the routines are well commented and should be relatively easy to understand.
